--- a/Contacto.html
+++ b/Contacto.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
         
         
                 </ul>
